Custom select: fix zoom distorting

--- a/source/assets/css/custom-select.scss
+++ b/source/assets/css/custom-select.scss
@@ -18,6 +18,7 @@
   .custom-dropdown {
     position: relative;
     vertical-align: middle;
+    overflow: hidden;
   }
 
   .custom-dropdown > select {
@@ -43,7 +44,7 @@
     content: '▿';
     font-size: 24px;
     line-height: 1.6;
-    bottom: 0;
+    bottom: -2px; /* fix zoom distorting */
     text-align: center;
   }
 
